[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fed = { git = "https://github.com/beiju/fed.git" }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.190"
uuid = { version = "1.5.0", features = ["v4"] }
futures = "0.3.29"
sled = "0.34.7"
reqwest = "0.11.22"
serde_json = "1.0.108"
bincode = "1.3.3"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
itertools = "0.11.0"
crab = { git = "https://github.com/kore-signet/carcinization.git" }